Cherry-pick a98a1455c175. rdar://problem/93083601

REGRESSION(253680@main): Build failure due to variable 'dataSize' set but not used
    https://bugs.webkit.org/show_bug.cgi?id=244255
    <rdar://99034117>

    Unreviewed build fix.

    Remove unused variable.

    * Source/WebKit/WebProcess/WebPage/IPCTestingAPI.cpp:
    (WebKit::IPCTestingAPI::encodeSharedMemory):

    Canonical link: https://commits.webkit.org/253684@main

Canonical link: https://commits.webkit.org/252432.687@safari-7614-branch